# forex-signal-bot

./: .env.example  .pylintrc  00_START_HERE.md  BOT_DEPLOYMENT_GUIDE.md  CODE_LOCATIONS.md  Dockerfile  ENHANCEMENTS.md  FILES_CHANGED.md  FLOW_DIAGRAMS.md  IMPLEMENTATION_SUMMARY.md  MARKET_DETECTION.md  MARKET_DETECTION_SUMMARY.md  POCKET_OPTION_UPGRADE_SUMMARY.md  PROJECT_MANIFEST.md  QUICKREF.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SENTIMENT_ANALYSIS_PLAN.md  SIGNAL_BEFORE_AFTER.md  SIGNAL_DEVELOPMENT.md  SIGNAL_DOCUMENTATION_INDEX.md  SIGNAL_EXAMPLES.md  SIGNAL_FORMAT.md  SIGNAL_FORMAT_SUMMARY.md  SIGNAL_LOGIC_UPGRADE_INDEX.md  SIGNAL_MESSAGE_DESIGN.md  SIGNAL_QUICKREF.md  STABILITY_ARCHITECTURE.md  STABILITY_CHECKLIST.md  STABILITY_DELIVERY_SUMMARY.md  STABILITY_EXAMPLES.md  STABILITY_FEATURES.md  STABILITY_INDEX.md  STABILITY_SUMMARY.md  TESTING_GUIDE.md  TRADING_LOGIC_GUIDE.md  UPGRADE_COMPLETE.md  __init__.py  pyproject.toml  (+6 more)
